--- a/css/style@600px.css
+++ b/css/style@600px.css
@@ -52,7 +52,7 @@ nav{
 }
 .project{
   margin: 1em auto;
-  width: 44vw;
+  width: 45vw;
 }
 .project img{
   width: 34vw;
